2006-01-15  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:
	* src/Makefile.am:

	Add NetworkManager magic for connection status autodetection.
	Defaults to disabled because I'm not very happy with the libnm-glib
	implementation. Oh, and it may crash on startup, too.

2006-01-15  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* lib/ephy-adblock.h:
	* lib/ephy-adblock.c:
	* embed/ephy-adblock-manager.h:
	* embed/ephy-adblock-manager.c:

	Add a method to EphyAdblock interface, ephy_adblock_manager_edit_rule,
	so one can allow/disallow an url.
	Add a method to EphyAdblockManager, ephy_adblock_manager_has_blocker, 
	so one can ask it whether a blocker is running.

2006-01-15  Crispin Flowerday  <gnome@flowerday.cx>

	* data/chrome/Makefile.am:
	* data/chrome/about.xhtml:
	* data/chrome/brand.dtd.in:
	* data/chrome/brand.properties.in:
	* data/chrome/epiphany.manifest.in:

	Override the page that is shown for the about: url so
	that it doesn't say "Deer Park"

2006-01-14  Chrhristian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/Makefile.am:
	* embed/mozilla/mozilla-embed-single.cpp:

	Only use the directory service provider on gecko 1.8;
	gecko 1.7 uses a different method to register chrome.

2006-01-14  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/mozilla/mozilla-embed-single.cpp (init_services): 

	Simplify creation and reference counting of the
	EphyDirectoryProvider class.

2006-01-14  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:
	
	Add defines and automake conditional for toolkit flavour.

	* configure.ac:
	* data/Makefile.am:
	A data/chrome/.cvsignore:
	A data/chrome/Makefile.am:
	A data/chrome/brand.dtd.in:
	A data/chrome/brand.properties.in:
	A data/chrome/epiphany.manifest.in:
	
	Provide branding so mozilla dialogues don't show "Deer Park" or
	"Firefox" but "Epiphany" instead.

	* embed/mozilla/Makefile.am:
	A embed/mozilla/EphyDirectoryProvider.cpp: