@@ -1,3 +1,11 @@
+2006-01-16  Crispin Flowerday  <gnome@flowerday.cx>
+
+	* embed/mozilla/EphyBrowser.cpp:
+
+	When looking at modified text areas and forms, don't
+	look at disabled or invisible elements. Patch by
+	chpe, part of bug #155603
+	
 2006-01-15  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
